# backbox-api

./: Dockerfile  PHASE3_SUMMARY.md  PHASE5_SUMMARY.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/admin/: apps.py  clients.py  providers.py  providers_v2.py  usage.py
app/api/v1/: generate.py  ingest.py  query.py
app/core/: config.py  tenancy.py
app/models/: database.py  models.py
app/services/: chunking_service.py  document_service.py  embedding_service.py  llm_providers.py  llm_router.py  provider_service.py  retrieval_service.py
scripts/: 001_add_provider_system.sql  002_complete_schema.sql  seed_provider_keys.py
