[project]
name = "blackbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Mahdy Hasan",email = "mahdyhasan@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.3.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "unstructured (>=0.21.5,<0.22.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "openai (>=2.29.0,<3.0.0)",
    "anthropic (>=0.86.0,<0.87.0)",
    "groq (>=1.1.1,<2.0.0)",
    "langfuse (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
